<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:orderInCategory="1"
        android:title="@string/sort_order"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_action_sort_asc"
                android:title="@string/alphabet_asc" />

            <item
                android:id="@+id/menu_action_sort_desc"
                android:title="@string/alphabet_desc" />
            <item
                android:id="@+id/menu_action_sort_duration_asc"
                android:title="@string/duration_asc" />
            <item
                android:id="@+id/menu_action_sort_duration_desc"
                android:title="@string/duration_desc" />
            <item
                android:id="@+id/menu_action_sort_date_added_desc"
                android:title="@string/date_added_desc" />
            <item
                android:id="@+id/menu_action_sort_date_added_asc"
                android:title="@string/date_added_asc" />
            <item
                android:id="@+id/menu_action_sort_date_modified_desc"
                android:title="@string/date_modified_desc" />
            <item
                android:id="@+id/menu_action_sort_date_modified_asc"
                android:title="@string/date_modified_asc" />
        </menu>
    </item>
    <item
        android:orderInCategory="2"
        android:title="@string/grid_count_land">
        <menu>
            <item
                android:id="@+id/l_two"
                android:title="@string/two" />

            <item
                android:id="@+id/l_three"
                android:title="@string/three" />

            <item
                android:id="@+id/l_four"
                android:title="@string/four" />

        </menu>
    </item>
</menu>