<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.radiant.music.views.SettingsCategoryItem
        android:id="@+id/generalSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        app:settingItemColoredIcon="true"
        app:settingItemIcon="@drawable/ic_settings"
        app:settingItemIconColor="@color/md_teal_A400"
        app:settingItemText="@string/general_desc"
        app:settingItemTitle="@string/general" />

    <com.radiant.music.views.SettingsCategoryItem
        android:id="@+id/themeSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        app:settingItemColoredIcon="true"
        app:settingItemIcon="@drawable/ic_theme_palette"
        app:settingItemIconColor="@color/md_red_A400"
        app:settingItemText="@string/theme_desc"
        app:settingItemTitle="@string/theme" />

    <com.radiant.music.views.SettingsCategoryItem
        android:id="@+id/nowPlayingSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        app:settingItemColoredIcon="true"
        app:settingItemIcon="@drawable/ic_play_circle"
        app:settingItemIconColor="@color/md_blue_A400"
        app:settingItemText="@string/now_playing_desc"
        app:settingItemTitle="@string/now_playing_title" />

    <com.radiant.music.views.SettingsCategoryItem
        android:id="@+id/audioSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        app:settingItemColoredIcon="true"
        app:settingItemIcon="@drawable/ic_audio"
        app:settingItemIconColor="@color/md_deep_orange_500"
        app:settingItemText="@string/audio_desc"
        app:settingItemTitle="@string/audio" />

    <com.radiant.music.views.SettingsCategoryItem
        android:id="@+id/widgetSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        app:settingItemColoredIcon="true"
        app:settingItemIcon="@drawable/ic_widgets"
        app:settingItemIconColor="@color/pinkb"
        app:settingItemText="@string/widgets_desc"
        app:settingItemTitle="@string/widgets" />

    <com.radiant.music.views.SettingsCategoryItem
        android:id="@+id/contributorsSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        app:settingItemColoredIcon="true"
        app:settingItemIcon="@drawable/ic_people"
        app:settingItemIconColor="@color/md_green_A700"
        app:settingItemText="@string/contributors_desc"
        app:settingItemTitle="@string/contributors" />

    <com.radiant.music.views.SettingsCategoryItem
        android:id="@+id/donationSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        app:settingItemColoredIcon="true"
        android:visibility="gone"
        app:settingItemIcon="@drawable/ic_donation"
        app:settingItemIconColor="@color/md_yellow_A400"
        app:settingItemText="@string/support_development_desc"
        app:settingItemTitle="@string/support_development" />

    <com.radiant.music.views.SettingsCategoryItem
        android:id="@+id/aboutSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        app:settingItemColoredIcon="true"
        app:settingItemIcon="@drawable/ic_info"
        app:settingItemIconColor="@color/md_deep_purple_A200"
        app:settingItemText="@string/about_desc"
        app:settingItemTitle="@string/about" />
</LinearLayout>