<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="0dp">

    <com.nezukoos.music.views.AccentColorTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/category_theme"
        android:textAppearance="@style/Appearance.Text.Overline" />

    <com.nezukoos.music.views.SettingsCategoryItem
        android:id="@+id/laf_select_dark_theme"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        app:settingItemIcon="@drawable/ic_theme_palette"
        app:settingItemIconColor="?attr/colorControlNormal"
        app:settingItemText="@string/select_dark_theme_desc"
        app:settingItemTitle="@string/select_dark_theme" />

    <com.nezukoos.music.views.SettingsToggleableItem
        android:id="@+id/laf_enable_dark_mode"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:settingToggleableItemIcon="@drawable/ic_dark_mode"
        app:settingToggleableItemText="@string/enable_dark_mode_desc"
        app:settingToggleableItemTitle="@string/enable_dark_mode" />

    <com.nezukoos.music.views.SettingsToggleableItem
        android:id="@+id/laf_enable_auto_mode"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:settingToggleableItemIcon="@drawable/ic_light"
        app:settingToggleableItemText="@string/enable_auto_mode_desc"
        app:settingToggleableItemTitle="@string/enable_auto_mode" />

    <com.nezukoos.music.views.AccentColorTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="10dp"
        android:text="@string/category_colors"
        android:textAppearance="@style/Appearance.Text.Overline" />

    <com.nezukoos.music.views.SettingsToggleableItem
        android:id="@+id/laf_enable_desaturated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:settingToggleableItemText="@string/desaturated_accents_desc"
        app:settingToggleableItemTitle="@string/desaturated_accents" />

    <com.nezukoos.music.views.SettingsCategoryItem
        android:id="@+id/laf_select_accent_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        app:settingItemText="@string/pick_accent_color_desc"
        app:settingItemTitle="@string/pick_accent_color" />
</LinearLayout>