<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_sort"
        android:orderInCategory="1"
        android:title="@string/sort_order"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/group_library_sort"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_action_sort_title_asc"
                    android:title="@string/alphabet_asc" />
                <item
                    android:id="@+id/menu_action_sort_title_desc"
                    android:title="@string/alphabet_desc" />
                <item
                    android:id="@+id/menu_action_sort_duration_asc"
                    android:title="@string/duration_asc" />
                <item
                    android:id="@+id/menu_action_sort_duration_desc"
                    android:title="@string/duration_desc" />
                <item
                    android:id="@+id/menu_action_sort_date_added_desc"
                    android:title="@string/date_added_desc" />
                <item
                    android:id="@+id/menu_action_sort_date_added_asc"
                    android:title="@string/date_added_asc" />
                <item
                    android:id="@+id/menu_action_sort_date_modified_desc"
                    android:title="@string/date_modified_desc" />
                <item
                    android:id="@+id/menu_action_sort_date_modified_asc"
                    android:title="@string/date_modified_asc" />
            </group>
        </menu>
    </item>

    <item
        android:icon="@drawable/ic_columns"
        android:orderInCategory="2"
        android:title="@string/grid_count"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/group_library_grid"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/library_one"
                    android:title="@string/one" />

                <item
                    android:id="@+id/library_two"
                    android:title="@string/two" />
            </group>
        </menu>
    </item>
</menu>