<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_album"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/ic_audio"
        android:title="@string/nav_library" />

    <item
        android:id="@+id/nav_homescreen"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_homescreen" />

    <item
        android:id="@+id/nav_artist"
        android:icon="@drawable/ic_artist"
        android:title="@string/nav_artists" />

    <item
        android:id="@+id/nav_playlist"
        android:icon="@drawable/ic_playlist"
        android:title="@string/nav_playlist" />

</menu>