<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="0dp">

    <com.hardcodecoder.pulsemusic.views.AccentColorTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/category_style"
        android:textAppearance="@style/Appearance.Text.Overline" />

    <com.hardcodecoder.pulsemusic.views.SettingsCategoryItem
        android:id="@+id/now_playing_screen_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        app:settingItemIcon="@drawable/ic_now_playing_style"
        app:settingItemIconColor="?attr/colorControlNormal"
        app:settingItemText="@string/select_np_style_desc"
        app:settingItemTitle="@string/select_np_style" />

    <com.hardcodecoder.pulsemusic.views.SettingsCategoryItem
        android:id="@+id/now_playing_album_cover_corner_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:textStyle="normal"
        app:settingItemIcon="@drawable/ic_rounded_corner"
        app:settingItemIconColor="?attr/colorControlNormal"
        app:settingItemText="@string/corner_radius_desc"
        app:settingItemTitle="@string/corner_radius" />

    <com.hardcodecoder.pulsemusic.views.AccentColorTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:text="@string/category_controls"
        android:textAppearance="@style/Appearance.Text.Overline" />

    <com.hardcodecoder.pulsemusic.views.SettingsToggleableItem
        android:id="@+id/np_enable_seek_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:settingToggleableItemText="@string/enable_seek_buttons_desc"
        app:settingToggleableItemTitle="@string/enable_seek_buttons" />

    <com.hardcodecoder.pulsemusic.views.SettingsCategoryItem
        android:id="@+id/now_playing_seek_duration_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:textStyle="normal"
        app:settingItemIcon="@drawable/ic_fast_forward"
        app:settingItemIconColor="?attr/colorControlNormal"
        app:settingItemText="@string/change_seek_duration_desc"
        app:settingItemTitle="@string/change_seek_duration" />
</LinearLayout>