<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_sort"
        android:orderInCategory="1"
        android:title="@string/title_sort_order"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/group_artist_sort"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_action_sort_artist_title_asc"
                    android:title="@string/alphabet_asc" />

                <item
                    android:id="@+id/menu_action_sort_artist_title_desc"
                    android:title="@string/alphabet_desc" />
            </group>
        </menu>
    </item>

    <item
        android:icon="@drawable/ic_columns"
        android:orderInCategory="2"
        android:title="@string/column_count"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/group_artist_grid"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/artist_two"
                    android:title="@string/two" />

                <item
                    android:id="@+id/artist_three"
                    android:title="@string/three" />

                <item
                    android:id="@+id/artist_four"
                    android:title="@string/four" />
            </group>
        </menu>
    </item>
</menu>