<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_sort"
        android:orderInCategory="1"
        android:title="@string/sort_order_title"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/group_album_sort"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_action_sort_album_title_asc"
                    android:title="@string/alphabet_asc" />

                <item
                    android:id="@+id/menu_action_sort_album_title_desc"
                    android:title="@string/alphabet_desc" />

                <item
                    android:id="@+id/menu_action_sort_track_num_asc"
                    android:title="@string/album_track_number_asc" />

                <item
                    android:id="@+id/menu_action_sort_track_num_desc"
                    android:title="@string/album_track_number_desc" />
            </group>
        </menu>
    </item>
</menu>