<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <com.radiant.music.views.AccentColorTextView
        android:id="@+id/auto_play_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/select_bluetooth_action"
        android:textAppearance="@style/Appearance.Text.Subtitle1" />

    <RadioGroup
        android:id="@+id/radio_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/auto_play_title"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <com.radiant.music.views.AccentColorRadioButton
            android:id="@+id/radio_btn_shuffle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="0dp"
            android:text="@string/play_shuffle"
            android:textColor="@color/shit"/>

        <com.radiant.music.views.AccentColorRadioButton
            android:id="@+id/radio_btn_suggested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="0dp"
            android:text="@string/play_for_you"
            android:textColor="@color/shit"/>

        <com.radiant.music.views.AccentColorRadioButton
            android:id="@+id/radio_btn_latest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="0dp"
            android:text="@string/play_new_in_store"
            android:textColor="@color/shit"/>

        <com.radiant.music.views.AccentColorRadioButton
            android:id="@+id/radio_btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="0dp"
            android:text="@string/play_continue_playlist"
            android:textColor="@color/shit"/>
    </RadioGroup>

    <com.radiant.music.views.AccentColorMaterialButton
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_button_group"
        android:layout_toStartOf="@id/set_btn"
        android:text="@string/cancel"
        app:accentButtonStyle="text" />

    <com.radiant.music.views.AccentColorMaterialButton
        android:id="@+id/set_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_button_group"
        android:layout_alignParentEnd="true"
        android:text="@string/set"
        app:accentButtonStyle="text" />
</RelativeLayout>